# BricksVM

./: .gitignore  CMakeLists.txt
config/: config.json
core/: CMakeLists.txt
core/include/core/: AbstractConsole.hpp  Any.hpp  Computation.hpp  Console.hpp  DllExport.hpp  IClonable.hpp  LibraryLoader.hpp  NewPolicy.hpp  NoCopyable.hpp  NonCopyable.hpp  Singleton.hpp  String.hpp  TypeList.hpp  UnixConsole.hpp  Utils.hpp  WinConsole.hpp  constants.hpp
core/include/device/: Memory.hpp
core/include/event/: Channel.hpp  EventThread.hpp  Message.hpp  ParallelEventThread.hpp
core/include/exception/: InvalidOperationException.hpp  InvalidTypeException.hpp
core/include/interpreter/: Value.hpp
core/include/thread/: AbstractWorker.hpp  Worker.hpp  WorkerPool.hpp
core/src/core/: Any.cpp  LibraryLoader.cpp  String.cpp  UnixConsole.cpp  WinConsole.cpp
core/src/device/: Memory.cpp
core/src/event/: EventThread.cpp  Message.cpp
core/src/exception/: InvalidOperationException.cpp  InvalidTypeException.cpp
core/src/interpreter/: Value.cpp
core/src/thread/: Worker.cpp  WorkerPool.cpp
device/SimpleAudio/: CMakeLists.txt
device/SimpleAudio/include/SimpleAudio/: AudioDevice.hpp  SimpleAudio.hpp
device/SimpleAudio/src/SimpleAudio/: AudioDevice.cpp  SimpleAudio.cpp
device/SimpleCPU/: CMakeLists.txt
device/SimpleCPU/include/SimpleCPU/: MathUnit.hpp  SimpleCPU.hpp
device/SimpleCPU/src/SimpleCPU/: MathUnit.cpp  SimpleCPU.cpp
device/SimpleHardDrive/: CMakeLists.txt
device/SimpleHardDrive/include/SimpleHardDrive/: SimpleHardDrive.hpp
device/SimpleHardDrive/src/SimpleHardDrive/: SimpleHardDrive.cpp
device/SimpleVideo/: CMakeLists.txt
device/SimpleVideo/include/SimpleVideo/: Screen.hpp  SimpleVideo.hpp
device/SimpleVideo/src/SimpleVideo/: Screen.cpp  SimpleVideo.cpp
lib/gason/include/gason/: DllExport.hpp  gason.hpp
lib/gason/lib/: gason.exp  gason.ilk  gason.lib
programs/: audio_player.s  distance.s  hello_world.s  save_text.s  square_move.s
tools/device_generator/: device_generator.py
tools/device_generator/templates/: CMakeLists.tpl  device_header.tpl  device_source.tpl
vm/: CMakeLists.txt
vm/include/: ConfigurationParser.hpp  Memory.hpp  VirtualMachine.hpp
vm/include/core/: Any.hpp  Function.hpp  IClonable.hpp  IFunction.hpp  LibraryLoader.hpp  NonCopyable.hpp  Utils.hpp
vm/include/device/: DeviceLoader.hpp
vm/include/event/: Channel.hpp  EventThread.hpp  Message.hpp  ParallelEventThread.hpp
vm/include/exception/: FileNotFoundException.hpp  InvalidInstructionException.hpp  StackOverflowException.hpp
vm/include/interpreter/: AParameter.hpp  Instruction.hpp  InstructionParameter.hpp  InstructionResolver.hpp  Parameter.hpp  Program.hpp  Utils.hpp  Value.hpp  ValueParameter.hpp
vm/include/parser/: Lexer.hpp  Parser.hpp
vm/include/rapidjson/: allocators.h
vm/include/thread/: AbstractWorker.hpp  Worker.hpp  WorkerPool.hpp
vm/src/: ConfigurationParser.cpp  Memory.cpp  VirtualMachine.cpp  main.cpp
vm/src/device/: DeviceLoader.cpp
vm/src/event/: Channel.cpp  EventThread.cpp  ParallelEventThread.cpp
vm/src/exception/: FileNotFoundException.cpp  InvalidInstructionException.cpp  StackOverflowException.cpp
vm/src/interpreter/: AParameter.cpp  Instruction.cpp  InstructionParameter.cpp  InstructionResolver.cpp  Program.cpp  ValueParameter.cpp  ValueParameter.hpp
vm/src/parser/: Lexer.cpp  Parser.cpp
vm/src/thread/: Worker.cpp  WorkerPool.cpp
